fix: adjust position mobile filter

--- a/styles/style.css
+++ b/styles/style.css
@@ -122,7 +122,7 @@ header .nav-links span.active {
 
 .filter-dropdown {
   position: absolute;
-  right: -65px;
+  right: 0px;
   top: calc(100% + 8px);
   width: 200px;
   background: white;
@@ -371,6 +371,7 @@ header .nav-links span.active {
 
   .search-wrapper {
     width: 90%;
+    padding: 0 20px;
   }
 
   #searchInput {
@@ -386,6 +387,13 @@ header .nav-links span.active {
     background: #f2f2f7;
     right: 72px;
   }
+  
+  .filter-dropdown {
+    right: 130px;
+        width: 180px;
+        top: 75px;
+  }
+  
   .pokemon-list {
     padding-top: 95px;
   }
